# Campus-Navigate-3D-BE

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
.github/workflows/: cd.yml
api/: admin.py  models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_alter_flightlocation_options_and_more.py  0003_universitymodel_alter_flightpoint_location.py  0004_alter_universitymodel_options_and_more.py  0005_remove_flightlocation_roll_and_more.py  0006_alter_flightlocation_image.py
api/static/: display.js
backend/: settings.py  urls.py  wsgi.py
docker/: docker-compose.yml
