[tool.poetry]
name = "campus-navigate-3d-be"
version = "0.1.0"
description = "🧭 Django REST API for managing interactive 3D campus navigation. Provides flight paths, dynamic model loading, and admin tools for point management."
authors = ["Zebaro <denok100100@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2.6"
psycopg2 = "^2.9.10"
djangorestframework = "^3.16.1"
pillow = "^11.3.0"
django-jazzmin = "^3.0.1"
python-decouple = "^3.8"
gunicorn = "^23.0.0"
whitenoise = "^6.10.0"
django-cors-headers = "^4.8.0"

[tool.poetry.group.dev.dependencies]